--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <header>header</header>
+    <nav>nav</nav>
+    <section>section
+        <article>
+            article
+                <h1>h1, h2, h3</h1>
+                <p>p</p>
+        </article>
+    </section>
+    <aside>aside</aside>
+    <div class="clearfix"></div>
+    <footer>footer</footer>
+
 </body>
 </html>
